Added md5sum to output xml, #10